# ChangeLog for net-analyzer/mtr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mtr/ChangeLog,v 1.164 2014/12/27 12:20:52 jer Exp $

  27 Dec 2014; Jeroen Roovers <jer@gentoo.org> mtr-9999.ebuild:
  Inherit fcaps.eclass, drop USE=suid by Kevin Korb (bug #483080).

  27 Dec 2014; Jeroen Roovers <jer@gentoo.org> mtr-0.86.ebuild:
  Inherit fcaps.eclass, drop USE=suid by Kevin Korb (bug #483080).

*mtr-0.86 (27 Dec 2014)

  27 Dec 2014; Jeroen Roovers <jer@gentoo.org> +mtr-0.86.ebuild:
  Version bump.

  18 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  mtr-0.85_p20140126.ebuild:
  Stable on alpha, bug #505440

  22 Jun 2014; Akinori Hattori <hattya@gentoo.org> mtr-0.85_p20140126.ebuild:
  ia64 stable wrt bug #505440

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  mtr-0.85_p20140126.ebuild:
  x86 stable wrt bug #505440

  03 Apr 2014; Jeroen Roovers <jer@gentoo.org> mtr-0.85_p20140126.ebuild:
  Do not inherit autotools.eclass.

  02 Apr 2014; Chema Alonso <nimiux@gentoo.org> mtr-0.85_p20140126.ebuild:
  Stable for amd64 wrt bug #505440

  01 Apr 2014; Markus Meier <maekke@gentoo.org> mtr-0.85_p20140126.ebuild:
  arm stable, bug #505440

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> mtr-0.85_p20140126.ebuild:
  Stable for HPPA (bug #505440).

  23 Mar 2014; Jeroen Roovers <jer@gentoo.org> -files/0.82-tinfo.patch,
  -mtr-0.82.ebuild:
  Old.

  26 Jan 2014; Ulrich Müller <ulm@gentoo.org> mtr-0.85_p20140126.ebuild:
  Fix SRC_URI.

*mtr-0.85_p20140126 (26 Jan 2014)

  26 Jan 2014; Jeroen Roovers <jer@gentoo.org> +mtr-0.85_p20140126.ebuild,
  mtr-9999.ebuild:
  Version bump awaiting an official release.

  05 Dec 2013; Jeroen Roovers <jer@gentoo.org> mtr-9999.ebuild:
  Add sed script that changes the version (bug #493308, patch by James).

  04 Dec 2013; Jeroen Roovers <jer@gentoo.org> mtr-9999.ebuild:
  Remove sed script that changes the version (bug #493308 by James).
